--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 <body>
     <header id="header">
         <h1 class="site-title"><a href="#header"><img src="img/web-logo.png" alt="logo"></a></h1>
+        <div class="header-sns-sp">
+            <div class="btn-sp line"><a href="https://lin.ee/o9bziWy"><img src="img/btn-line.png" alt="line-icon"></a></div>
+            <div class="btn-sp instagram"><a href="#"><img src="img/btn-instagram.png" alt="instagram-icon"></a></div>
+        </div>
         <nav id="header-navi">
             <ul>
                 <li><a href="#menu">menu</a></li>
@@ -41,10 +45,12 @@
             <div class="btn line"><a href="https://lin.ee/o9bziWy"><img src="img/line.png" alt="line-icon"></a></div>
             <div class="btn instagram"><a href="#"><img src="img/instagram.png" alt="instagram-icon"></a></div>
         </div>
+    
     </header>
     <main>
         <section id="main-visual">
-            <img src="img/main-pc.jpg" alt="main-visual">
+            <img src="img/main-pc.jpg" alt="main-visual" class="main-pc">
+            <img src="img/main-sp.png" alt="main-sp" class="main-sp">
         </section>
         <section id="menu">
             <div class="piano-container">
@@ -306,7 +312,8 @@
         </section>
     </main>
     <footer id="footer">
-        <img src="img/footer-pc.jpg" alt="footer">
+        <img src="img/footer-pc.jpg" alt="footer-pc" class="footer-pc">
+        <img src="img/footer-sp.png" alt="footer-sp" class="footer-sp">
         <div class="access">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.7425075983997!2d135.705423825756!3d34.963061922827706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60010685b28eab59%3A0x60e66b8154d122bf!2z44Kk44Kq44Oz44Oi44O844Or5Lqs6YO95qGC5bed!5e0!3m2!1sja!2sjp!4v1750334797333!5m2!1sja!2sjp"
