レスポンシブ対応の大幅修正

--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 
 <body>
     <header id="header">
-        <h1 class="site-title"><a href="#header"><img src="img/web-logo.png" alt="logo"></a></h1>
-        <div class="header-sns-sp">
-            <div class="btn-sp line"><a href="https://lin.ee/o9bziWy"><img src="img/btn-line.png" alt="line-icon"></a></div>
-            <div class="btn-sp instagram"><a href="#"><img src="img/btn-instagram.png" alt="instagram-icon"></a></div>
+        <div class="header-top">
+            <h1 class="site-title"><a href="#header"><img src="img/web-logo.png" alt="logo"></a></h1>
+            <div class="header-sns-sp">
+                <div class="btn-sp line"><a href="https://lin.ee/o9bziWy"><img src="img/btn-line.png"
+                            alt="line-icon"></a></div>
+                <div class="btn-sp instagram"><a href="#"><img src="img/btn-instagram.png" alt="instagram-icon"></a>
+                </div>
+            </div>
         </div>
         <nav id="header-navi">
             <ul>
@@ -45,7 +49,7 @@
             <div class="btn line"><a href="https://lin.ee/o9bziWy"><img src="img/line.png" alt="line-icon"></a></div>
             <div class="btn instagram"><a href="#"><img src="img/instagram.png" alt="instagram-icon"></a></div>
         </div>
-    
+
     </header>
     <main>
         <section id="main-visual">
@@ -191,7 +195,8 @@
                     <div class="text">
                         <h2 class="article-title">体験レッスンをご希望の方へ──</h2>
                         <p>教室のLINEを友だち追加していただき、お子さまのお名前と年齢をトークに送信してください。こちらから日程のご案内をさせていただきます♪</p>
-                        <p><span>Piccola Piano</span>（ピッコラピアノ）は、イタリア語で「小さなピアノ」という意味。「小さな手で」「少しずつ」「楽しく」音楽とふれあってほしい。そんな思いをこめて名づけました。
+                        <p><span>Piccola
+                                Piano</span>（ピッコラピアノ）は、イタリア語で「小さなピアノ」という意味。「小さな手で」「少しずつ」「楽しく」音楽とふれあってほしい。そんな思いをこめて名づけました。
                         </p>
                         <p>はじめてのレッスンが、お子さまにとって楽しい音の時間になりますように。どうぞお気軽にご連絡くださいね。</p>
                     </div>
@@ -322,9 +327,11 @@
             <div class="text">
                 <article>
                     <h3 class="access-title">アクセス方法</h3>
-                    <p>最寄り駅はJR「桂川駅」となっており、駅から徒歩圏内です。お車でお越しの場合は、周辺道路の混雑状況や駐停車禁止区域にご留意ください。お車でお越しの際は、イオンモール桂川などの近隣商業施設の駐車場をご利用いただくか、公共交通機関のご利用をおすすめいたします。</p>
+                    <p>最寄り駅はJR「桂川駅」となっており、駅から徒歩圏内です。お車でお越しの場合は、周辺道路の混雑状況や駐停車禁止区域にご留意ください。お車でお越しの際は、イオンモール桂川などの近隣商業施設の駐車場をご利用いただくか、公共交通機関のご利用をおすすめいたします。
+                    </p>
                     <h3 class="access-title">レッスン中の待機場所について</h3>
-                    <p>レッスンの待ち時間には、イオンモールなどの商業施設でお過ごしいただけますと幸いです。安全面の観点から、教室前やマンション敷地内での長時間の待機はご遠慮いただきますよう、何卒ご理解とご協力をお願いいたします。</p>
+                    <p>レッスンの待ち時間には、イオンモールなどの商業施設でお過ごしいただけますと幸いです。安全面の観点から、教室前やマンション敷地内での長時間の待機はご遠慮いただきますよう、何卒ご理解とご協力をお願いいたします。
+                    </p>
                 </article>
             </div>
         </div>
