--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="header-sns-sp">
                 <div class="btn-sp line"><a href="https://lin.ee/o9bziWy"><img src="img/btn-line.png"
                             alt="line-icon"></a></div>
-                <div class="btn-sp instagram"><a href="#"><img src="img/btn-instagram.png" alt="instagram-icon"></a>
+                <div class="btn-sp instagram"><a href="https://www.instagram.com/piccola_piano"><img src="img/btn-instagram.png" alt="instagram-icon"></a>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
         </nav>
         <div class="header-sns">
             <div class="btn line"><a href="https://lin.ee/o9bziWy"><img src="img/line.png" alt="line-icon"></a></div>
-            <div class="btn instagram"><a href="#"><img src="img/instagram.png" alt="instagram-icon"></a></div>
+            <div class="btn instagram"><a href="https://www.instagram.com/piccola_piano"><img src="img/instagram.png" alt="instagram-icon"></a></div>
         </div>
 
     </header>
@@ -220,7 +220,7 @@
                         <h2 class="article-title">みんなの様子──</h2>
                         <p>みんなのがんばってる様子を教室のInstagramでも少しずつ紹介していきます♪楽しい写真をどんどんアップしていく予定なので、よかったらのぞいてみてくださいね!</p>
                     </div>
-                    <a href="#"><img src="img/btn-instagram.png" alt="教室のinstagram"></a>
+                    <a href="https://www.instagram.com/piccola_piano"><img src="img/btn-instagram.png" alt="教室のinstagram"></a>
                 </article>
             </div>
         </section>
