--- a/index.html
+++ b/index.html
@@ -34,20 +34,22 @@
             <div class="header-sns-sp">
                 <div class="btn-sp line"><a href="https://lin.ee/o9bziWy"><img src="img/btn-line.png"
                             alt="line-icon"></a></div>
-                <div class="btn-sp instagram"><a href="https://www.instagram.com/piccola_piano"><img src="img/btn-instagram.png" alt="instagram-icon"></a>
+                <div class="btn-sp instagram"><a href="https://www.instagram.com/piccola_piano"><img
+                            src="img/btn-instagram.png" alt="instagram-icon"></a>
                 </div>
             </div>
         </div>
         <nav id="header-navi">
             <ul>
                 <li><a href="#menu">menu</a></li>
-                <li><a href="#do">about</a></li>
+                <li class="about-do"><a href="#do">about</a></li>
                 <li><a href="#footer">access</a></li>
             </ul>
         </nav>
         <div class="header-sns">
             <div class="btn line"><a href="https://lin.ee/o9bziWy"><img src="img/line.png" alt="line-icon"></a></div>
-            <div class="btn instagram"><a href="https://www.instagram.com/piccola_piano"><img src="img/instagram.png" alt="instagram-icon"></a></div>
+            <div class="btn instagram"><a href="https://www.instagram.com/piccola_piano"><img src="img/instagram.png"
+                        alt="instagram-icon"></a></div>
         </div>
 
     </header>
@@ -59,8 +61,8 @@
         <section id="menu">
             <div class="piano-container">
                 <div class="piano-wrap">
-                    <div class="piano-key do white-key vertical-rotated">
-                        <a href="#do">
+                    <a href="#do" class="piano-key do white-key vertical-rotated">
+                        <div class="piano">
                             <span>ど</span>
                             <span>ん</span>
                             <span>な</span>
@@ -74,11 +76,11 @@
                             <span>ひ</span>
                             <span>と</span>
                             <span>？</span>
-                        </a>
-                    </div><!-- ド -->
+                        </div>
+                    </a><!-- ド -->
                     <div class="piano-key black-key"></div><!-- ド# -->
-                    <div class="piano-key re white-key vertical-rotated">
-                        <a href="#re">
+                    <a href="#re" class="piano-key re white-key vertical-rotated">
+                        <div class="piano">
                             <span>レ</span>
                             <span>ッ</span>
                             <span>ス</span>
@@ -94,21 +96,21 @@
                             <span>ッ</span>
                             <span>ス</span>
                             <span>ン</span>
-                        </a>
-                    </div><!-- レ -->
+                        </div>
+                    </a><!-- レ -->
                     <div class="piano-key black-key"></div><!-- レ# -->
-                    <div class="piano-key mi white-key vertical-rotated">
-                        <a href="#mi">
+                    <a href="#mi" class="piano-key mi white-key vertical-rotated">
+                        <div class="piano">
                             <span>み</span>
                             <span>ん</span>
                             <span>な</span>
                             <span>の</span>
                             <span>様</span>
                             <span>子</span>
-                        </a>
-                    </div><!-- ミ -->
-                    <div class="piano-key fa white-key vertical-rotated">
-                        <a href="#fa">
+                        </div>
+                    </a><!-- ミ -->
+                    <a href="#fa" class="piano-key fa white-key vertical-rotated">
+                        <div class="piano">
                             <span>フ</span>
                             <span>ァ</span>
                             <span>イ</span>
@@ -120,35 +122,35 @@
                             <span>ロ</span>
                             <span>ー</span>
                             <span>ド</span>
-                        </a>
-                    </div><!-- ファ -->
+                        </div>
+                    </a><!-- ファ -->
                     <div class="piano-key black-key"></div><!-- ファ# -->
-                    <div class="piano-key so white-key vertical-rotated">
-                        <a href="#so">
+                    <a href="#so" class="piano-key so white-key vertical-rotated">
+                        <div class="piano">
                             <span>相</span>
                             <span>談</span>
                             <span>室</span>
-                        </a>
-                    </div><!-- ソ -->
+                        </div>
+                    </a><!-- ソ -->
                     <div class="piano-key black-key"></div><!-- ソ# -->
-                    <div class="piano-key la white-key vertical-rotated">
-                        <a href="#la">
+                    <a href="#la" class="piano-key la white-key vertical-rotated">
+                        <div class="piano">
                             <span>ラ</span>
                             <span>イ</span>
                             <span>ブ</span>
                             <span>ラ</span>
                             <span>リ</span>
                             <span>ー</span>
-                        </a>
-                    </div><!-- ラ -->
+                        </div>
+                    </a><!-- ラ -->
                     <div class="piano-key black-key"></div><!-- ラ# -->
-                    <div class="piano-key si white-key vertical-rotated">
-                        <a href="#si">
+                    <a href="#si" class="piano-key si white-key vertical-rotated">
+                        <div class="piano">
                             <span>し</span>
                             <span>ら</span>
                             <span>せ</span>
-                        </a>
-                    </div><!-- シ -->
+                        </div>
+                    </a><!-- シ -->
                 </div>
             </div>
         </section>
@@ -220,7 +222,8 @@
                         <h2 class="article-title">みんなの様子──</h2>
                         <p>みんなのがんばってる様子を教室のInstagramでも少しずつ紹介していきます♪楽しい写真をどんどんアップしていく予定なので、よかったらのぞいてみてくださいね!</p>
                     </div>
-                    <a href="https://www.instagram.com/piccola_piano"><img src="img/btn-instagram.png" alt="教室のinstagram"></a>
+                    <a href="https://www.instagram.com/piccola_piano"><img src="img/btn-instagram.png"
+                            alt="教室のinstagram"></a>
                 </article>
             </div>
         </section>
