カレンダーページの更新

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Walter+Turncoat&family=Zen+Maru+Gothic&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Walter+Turncoat&family=Zen+Maru+Gothic&display=swap"
+        rel="stylesheet">
     <!-- Slickの基本CSS -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <!-- SlickのテーマCSS（ドットや矢印のスタイルが含まれる） -->
     <link rel="stylesheet" type="text/css"
-    href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Google reCAPTCHA 導入（v2） -->
@@ -187,9 +187,8 @@
             <img src="img/menu-re.jpg" alt="レッスンカレンダー・体験レッスン">
             <div class="calendar">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.7425075983997!2d135.705423825756!3d34.963061922827706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60010685b28eab59%3A0x60e66b8154d122bf!2z44Kk44Kq44Oz44Oi44O844Or5Lqs6YO95qGC5bed!5e0!3m2!1sja!2sjp!4v1750334797333!5m2!1sja!2sjp"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Asia%2FTokyo&showTz=0&showPrint=0&showTabs=0&showCalendars=0&title=%E4%BB%8A%E6%9C%88%E3%81%AE%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC&src=cGljY29sYXBpYW5vQGdtYWlsLmNvbQ&src=amEuamFwYW5lc2UjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039be5&color=%230b8043"
+                    style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                 <article>
                     <div class="text">
                         <h2 class="article-title">体験レッスンをご希望の方へ──</h2>
@@ -335,7 +334,7 @@
         </div>
         <p class="copy-right">© Piccola Piano</p>
     </footer>
-        <!-- jQuery（slick.jsより先） -->
+    <!-- jQuery（slick.jsより先） -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- slick.js -->
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
