--- a/index.html
+++ b/index.html
@@ -186,11 +186,7 @@
         <section id="re" class="accordion-item">
             <img src="img/menu-re.jpg" alt="レッスンカレンダー・体験レッスン">
             <div class="calendar">
-                <iframe
-                    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Asia%2FTokyo&showTz=0&showPrint=0&showTabs=0&showCalendars=0&title=%E4%BB%8A%E6%9C%88%E3%81%AE%E3%83%AC%E3%83%83%E3%82%B9%E3%83%B3%E3%82%AB%E3%83%AC%E3%83%B3%E3%83%80%E3%83%BC&src=cGljY29sYXBpYW5vQGdtYWlsLmNvbQ&src=amEuamFwYW5lc2UjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039be5&color=%230b8043"
-                    style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-                <article>
-                    <div class="text">
+<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Asia%2FTokyo&showPrint=0&showTabs=0&showCalendars=0&showTz=0&showTitle=0&src=cGljY29sYXBpYW5vQGdtYWlsLmNvbQ&src=amEuamFwYW5lc2UjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039be5&color=%230b8043" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>                    <div class="text">
                         <h2 class="article-title">体験レッスンをご希望の方へ──</h2>
                         <p>教室のLINEを友だち追加していただき、お子さまのお名前と年齢をトークに送信してください。こちらから日程のご案内をさせていただきます♪</p>
                         <p><span>Piccola
