--- a/index.html
+++ b/index.html
@@ -186,16 +186,18 @@
         <section id="re" class="accordion-item">
             <img src="img/menu-re.jpg" alt="レッスンカレンダー・体験レッスン">
             <div class="calendar">
-<iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Asia%2FTokyo&showPrint=0&showTabs=0&showCalendars=0&showTz=0&showTitle=0&src=cGljY29sYXBpYW5vQGdtYWlsLmNvbQ&src=amEuamFwYW5lc2UjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039be5&color=%230b8043" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>                    <div class="text">
-                        <h2 class="article-title">体験レッスンをご希望の方へ──</h2>
-                        <p>教室のLINEを友だち追加していただき、お子さまのお名前と年齢をトークに送信してください。こちらから日程のご案内をさせていただきます♪</p>
-                        <p><span>Piccola
-                                Piano</span>（ピッコラピアノ）は、イタリア語で「小さなピアノ」という意味。「小さな手で」「少しずつ」「楽しく」音楽とふれあってほしい。そんな思いをこめて名づけました。
-                        </p>
-                        <p>はじめてのレッスンが、お子さまにとって楽しい音の時間になりますように。どうぞお気軽にご連絡くださいね。</p>
-                    </div>
-                    <a href="https://lin.ee/o9bziWy"><img src="img/btn-line.png" alt="LINE友だち追加"></a>
-                </article>
+                <iframe
+                    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Asia%2FTokyo&showPrint=0&showTabs=0&showCalendars=0&showTz=0&showTitle=0&src=cGljY29sYXBpYW5vQGdtYWlsLmNvbQ&src=amEuamFwYW5lc2UjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23039be5&color=%230b8043"
+                    style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <h2 class="article-title">体験レッスンをご希望の方へ──</h2>
+                <p>教室のLINEを友だち追加していただき、お子さまのお名前と年齢をトークに送信してください。こちらから日程のご案内をさせていただきます♪</p>
+                <p><span>Piccola
+                        Piano</span>（ピッコラピアノ）は、イタリア語で「小さなピアノ」という意味。「小さな手で」「少しずつ」「楽しく」音楽とふれあってほしい。そんな思いをこめて名づけました。
+                </p>
+                <p>はじめてのレッスンが、お子さまにとって楽しい音の時間になりますように。どうぞお気軽にご連絡くださいね。</p>
+            </div>
+            <a href="https://lin.ee/o9bziWy"><img src="img/btn-line.png" alt="LINE友だち追加"></a>
+            </article>
             </div>
         </section>
         <section id="mi" class="accordion-item">
@@ -278,9 +280,9 @@
             <div class="library">
                 <h2 class="section-title">お手本動画</h2>
                 <ul class="movie">
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>・・・準備中・・・</li>
+                    <li>・・・準備中・・・</li>
+                    <li>・・・準備中・・・</li>
                     <li></li>
                 </ul>
                 <a href="#"><img src="img/btn-instagram.png" alt="教室のinstagram"></a>
