再設定して更新
git push -u origin main

--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
                         <img src="img/teacher_2.PNG" alt="teacher_2">
                         <div class="text">
                             <h2 class="article-title">講師プロフィールとごあいさつ──</h2>
-                            <p>2016年 京都華頂女子高等学校 音楽学科ピアノコース 卒業<br>2020年 沖縄県立芸術大学 音楽学部 音楽学科 音楽表現専攻 ピアノコース 卒業</p>
+                            <!-- <p>2016年 京都華頂女子高等学校 音楽学科ピアノコース 卒業<br>2020年 沖縄県立芸術大学 音楽学部 音楽学科 音楽表現専攻 ピアノコース 卒業</p> -->
                             <p>大学卒業後は一度、一般企業に就職しましたが、ピアノのない生活にどこか違和感を抱き続けていました。</p>
                             <p>「音楽にふれ、誰かと分かち合うことの喜び」を大切にしたいという思いから2021年の冬、京都府向日市の自宅で小さなピアノ教室を開講しました。<br>
                                 子どもたちにピアノの楽しさを伝える日々の中で、気づけば私のほうがたくさんのことを子どもたちから学んでいたように思います。</p>
-                            <p>その後、家庭の事情により向日市の教室は閉じることとなりましたが、このたび、桂川の地で新しく「<span>Piccola Piano</span>」教室を開講する運びとなりました。
-                            </p>
+                            <!-- その後、家庭の事情により向日市の教室は閉じることとなりましたが、このたび、桂川の地で -->
+                            <p>このたび新しく「<span>Piccola Piano</span>」教室を開講する運びとなりました。</p>
                             <p>現在、私自身も一人の母として子育てをしています。だからこそピアノのレッスンを通して、お子さまがどのようなことに取り組み、どんなことに成長を感じているのか。ご家庭でも共有していただけるよう、保護者の方とのコミュニケーションを大切にした運営を心がけております。
                             </p>
                             <p>ピアノが「好き」という気持ちを大切にしながら、一人ひとりの歩幅で、音楽とともに豊かな時間を育んでいけたら嬉しいです。</p>
@@ -195,8 +195,6 @@
                 <p>はじめてのレッスンが、お子さまにとって楽しい音の時間になりますように。どうぞお気軽にご連絡くださいね。</p>
             </div>
             <a href="https://lin.ee/o9bziWy"><img src="img/btn-line.png" alt="LINE友だち追加"></a>
-            </article>
-            </div>
         </section>
         <section id="mi" class="accordion-item">
             <img src="img/menu-mi.jpg" alt="みんなの様子">
